[tool.poetry]
name = "kappa-1n"
version = "0.1.0"
description = "Partial implementation https://arxiv.org/abs/1802.05495"
authors = ["fxeqxmulfx <mikhail.boriso2014@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
